# hitomi-downloader

./: LICENSE  README.md  README.zh-CN.md  README_CN.md  components.d.ts  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  bug_report.zh-CN.yml  config.yml  feature_request.yml
.github/workflows/: Publish.yml
src/: App.vue  AppContent.vue  bindings.ts  main.ts  store.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  download_manager.rs  events.rs  export.rs  extensions.rs  hitomi_client.rs  lib.rs  logger.rs  main.rs  utils.rs
src-tauri/src/hitomi/: common.rs  gg.rs  mod.rs  result.rs  search.rs
src-tauri/src/types/: comic.rs  comic_info.rs  download_format.rs  log_level.rs  mod.rs  proxy_mode.rs  search_result.rs
src/components/: AboutDialog.vue  ComicCard.vue  CompletedProgresses.vue  DownloadButton.vue  DownloadedComicCard.vue  FloatLabelInput.vue  LogViewer.vue  SettingsDialog.vue  UncompletedProgresses.vue
src/locales/: en-US.json  index.ts  zh-CN.json
src/panes/: ComicPane.vue  DownloadedPane.vue  DownloadingPane.vue  SearchPane.vue
